--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "test": "dotenv -e .env.test prisma db seed && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -i",
+    "coverage": "dotenv -e .env.test prisma db seed && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -i -- --coverage"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,19 +19,19 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^27.0.0",
     "@types/joi": "^17.2.3",
     "@types/node": "^16.3.3",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.32.0",
-    "jest": "^28.0.3",
+    "jest": "27.0.0",
     "nodemon": "^2.0.12",
     "prisma": "^3.13.0",
-    "supertest": "^6.1.3",
-    "ts-jest": "^28.0.0",
+    "supertest": "^6.2.3",
+    "ts-jest": "^27.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
